ASMContentHandler: avoid invoking constructors deprecated since JDK 9